[Fix]: change text alignment of resume text

--- a/styles/Resume.module.scss
+++ b/styles/Resume.module.scss
@@ -19,7 +19,7 @@
   .paragraph {
     margin-bottom: 2rem;
     font-size: 1.5rem;
-    text-align: justify;
+    text-align: left;
   }
 
   a {
